--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDJTg1QT3Y2-CNcNqVhhv8_0YG3AgBXUyg</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Google API Key</string>
 </resources>
