Simplified ProdcutsAdapter and removed obsolete files.
Added temporary add-to-cart button that saves into preferences

Added new NavBar Item for Shopping Cart

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_outline_shopping_cart_24"
         android:title="@string/title_products" />
 
+    <item
+        android:id="@+id/navigation_cart"
+        android:icon="@drawable/ic_outline_shopping_cart_24"
+        android:title="@string/title_cart" />
+
 </menu>
