--- a/app/src/main/res/layout/products_item.xml
+++ b/app/src/main/res/layout/products_item.xml
@@ -47,4 +47,14 @@
         android:textColor="#343434"
         android:textSize="15sp"
         android:text="Preis: 20.-" />
+
+    <Button
+        android:id="@+id/addToCartButton"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/description"
+        android:layout_marginTop="22dp"
+        android:layout_toRightOf="@+id/productImg"
+        android:text="Buy"
+        android:textSize="8sp" />
 </RelativeLayout>
